--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,74 +8,84 @@
             name="fragment"
             type="com.koniukhov.waterreminder.fragments.HomeFragment" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:id="@+id/root"
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.koniukhov.waterreminder.views.WaterProgressCircle
-            android:id="@+id/circleProgress"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:progress="0"
-            app:textBottom="0"
-            app:textBottomSize="16sp"
-            app:textCenter="0"
-            app:textCenterSize="24sp"
-            app:waveAmplitude="40"
-            android:onClick='@{() -> fragment.saveWater()}'/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+            <com.koniukhov.waterreminder.views.WaterProgressCircle
+                android:id="@+id/circleProgress"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:progress="0"
+                app:textBottom="0"
+                app:textBottomSize="16sp"
+                app:textCenter="0"
+                app:textCenterSize="24sp"
+                app:waveAmplitude="40"
+                android:onClick='@{() -> fragment.saveWater()}'/>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="@dimen/circle_button_size"
-            android:layout_height="@dimen/circle_button_size"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/circle_background"
-            android:elevation="2dp"
-            android:onClick='@{() -> fragment.showCustomWaterVolumeDialog()}'
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circleProgress">
+            <RelativeLayout
+                android:id="@+id/relativeLayout"
+                android:layout_width="@dimen/circle_button_size"
+                android:layout_height="@dimen/circle_button_size"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/circle_background"
+                android:elevation="2dp"
+                android:onClick='@{() -> fragment.showCustomWaterVolumeDialog()}'
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/circleProgress">
 
-            <ImageView
-                android:id="@+id/custom_water_btn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_drink_ware_custom" />
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/custom_water_btn"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_drink_ware_custom" />
+            </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="@dimen/circle_button_size"
-            android:layout_height="@dimen/circle_button_size"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/circle_background"
-            android:elevation="2dp"
-            android:onClick='@{() -> fragment.showDrinkWareDialog()}'
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circleProgress">
+            <RelativeLayout
+                android:layout_width="@dimen/circle_button_size"
+                android:layout_height="@dimen/circle_button_size"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/circle_background"
+                android:elevation="2dp"
+                android:onClick='@{() -> fragment.showDrinkWareDialog()}'
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/circleProgress">
 
-            <ImageView
-                android:id="@+id/drink_ware_btn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_drink_ware_100_ml" />
-            <ImageView
-                    android:src="@drawable/ic_update"
+                <ImageView
+                    android:id="@+id/drink_ware_btn"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_drink_ware_100_ml" />
+
+                <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_margin="1dp"
                     android:background="@drawable/circle_background"
                     android:elevation="1dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="1dp"/>
+                    android:src="@drawable/ic_update" />
 
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 </layout>
