--- a/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
+++ b/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
@@ -1,123 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <import type="com.koniukhov.waterreminder.utilities.Constants"/>
-        <variable
-            name="viewModel"
-            type="com.koniukhov.waterreminder.viewmodels.MainViewModel" />
-
-        <variable
-            name="fragment"
-            type="com.koniukhov.waterreminder.dialogs.CustomWaterVolumeDialogFragment" />
-    </data>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="@dimen/dialog_padding">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/radius">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/double_margin"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dialog_padding">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/materialTextView"
-                style="@style/TextAppearance.Material3.TitleMedium"
-                android:layout_width="wrap_content"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/time_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_time"
+                android:layout_centerVertical="true"/>
+            <NumberPicker
+                android:id="@+id/hour_of_drinking"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="@string/add_custom_water_amount"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="0dp"
+                android:layout_toEndOf="@id/time_icon"/>
+            <NumberPicker
+                android:id="@+id/minute_of_drinking"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/double_margin"
-                android:orientation="horizontal"
-                android:weightSum="2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialTextView">
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/time_icon"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/ic_time"
-                        android:layout_centerVertical="true"/>
-
-                    <NumberPicker
-                        android:id="@+id/wake_up_hour"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        app:maxValue="@{Constants.HOUR_MAX_VALUE}"
-                        app:minValue="@{Constants.HOUR_MIN_VALUE}"
-                        app:value='@{fragment.time.hour}'
-                        android:layout_toEndOf="@id/time_icon"/>
-
-                    <NumberPicker
-                        android:id="@+id/wake_up_minute"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/base_margin"
-                        android:layout_toRightOf="@id/wake_up_hour"
-                        app:maxValue="@{Constants.MINUTE_MAX_VALUE}"
-                        app:minValue="@{Constants.HOUR_MIN_VALUE}"
-                        app:value='@{fragment.time.minute}'/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-                    <ImageView
-                        android:id="@+id/drink_ware_icon"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/ic_drink_ware_custom"
-                        android:layout_centerVertical="true"/>
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/water_amount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="number"
-                        android:maxLength="4"
-                        android:layout_toEndOf="@id/drink_ware_icon"
-                        android:layout_centerVertical="true"/>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/save_btn"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="wrap_content"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_toRightOf="@id/hour_of_drinking"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/drink_ware_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_drink_ware_custom"
+                android:layout_centerVertical="true"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/water_amount"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/dialog_save_btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                android:onClick='@{() -> fragment.saveWater()}'/>
-
-            <Button
-                android:id="@+id/cancel_btn"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_cancel_btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/save_btn"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                android:onClick='@{() -> fragment.dismissDialog()}'/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
-</layout>
+                android:inputType="number"
+                android:maxLength="4"
+                android:layout_toEndOf="@id/drink_ware_icon"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
